# droppii

./: .gitignore  .safety-policy.yml  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: checks_and_tests.yml  release.yml  standards.yml  static.yml  unit-tests.yml
doc/: index.html
doc/dropii-graph/logseq/: config.edn
doc/dropii-graph/logseq/.recycle/: pages_Documentation.md  pages_DropPii.md
doc/dropii-graph/logseq/bak/logseq/config/: 2024-05-24T16_43_52.249Z.Desktop.edn  2024-05-24T16_53_02.232Z.Desktop.edn  2024-05-24T20_01_21.767Z.Desktop.edn  2024-05-28T15_11_29.621Z.Desktop.edn  2024-05-28T15_31_50.873Z.Desktop.edn
doc/dropii-graph/pages/: Creating Documentation.md  Development Environment Setup.md  Development Tasks.md  Project Requirements.md  Running Tests.md  contents.md  droppii.hide_values.md  droppii.md
doc/www/: index.html
docs/: mkdocs.yml
docs/docs/: developers.md  file_structure.md  index.md  installation.md  usage.md
src/DropPii/: DropPii.py
src/DropPii/s3_get/: s3_get.py
src/droppii/: __init__.py  __main__.py  _cli.py  _replace_bytes_values.py  censor.py  droppii.py  hide_fields.py  replace_df_fields.py  s3_get.py
test/: _replace_bytes_values_test.py  anonymize_fields_test.py  censor_test.py  conftest.py  hide_fields_test.py  package_size.sh  replace_df_fields_test.py  replace_fields_test.py  s3_get_test.py
test/sample_files/: small.csv  small.json
