[project]
name = "DropPii"
version = "0.1"
description = "General purpose tool to process data from S3 and anonymize fields containing personally identifiable information."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["autopep8", "bandit", "flake8", "moto", "safety", "pytest", "pytest-cov", "boto3"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
