[project]
name = "droppii"
version = "v0.0.0"
description = "General purpose tool to process data from S3 and anonymize fields containing personally identifiable information."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["boto3","polars"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "bandit",
    "flake8",
    "mkdocs",
    "moto",
    "safety",
    "pytest",
    "pytest-cov",
    "Faker"
    ]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = ["slow: marks test as slow, deselect with '-m \"not slow\"'"]
